<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/opmat"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_numero2"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/segundo_numero"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_numero1"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero1" />

    <EditText
        android:id="@+id/edt_numero1"
        android:layout_width="407dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/primer_numero"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sumar"
        android:onClick="sumar"
        android:layout_width="90dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/sumar"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="@+id/edt_numero2"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero2"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btn_dividir"
        android:onClick="dividir"
        android:layout_width="85dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:background="#E6ED06"
        android:text="@string/btn_dividir"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btn_sumar"
        app:layout_constraintTop_toBottomOf="@+id/btn_sumar" />

    <Button
        android:id="@+id/btn_menos"
        android:onClick="restar"
        android:layout_width="83dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/botonmenos"
        android:text="@string/btn_menos"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/btn_sumar"
        app:layout_constraintTop_toTopOf="@+id/btn_sumar" />

    <Button
        android:id="@+id/button4"
        android:onClick="multiplicar"
        android:layout_width="87dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:background="#4CAF50"
        android:text="@string/btn_por"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btn_menos"
        app:layout_constraintTop_toTopOf="@+id/btn_menos" />

    <Button
        android:id="@+id/button5"
        android:onClick="resto"
        android:layout_width="83dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#F40707"
        android:text="@string/btn_resto"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btn_dividir"
        app:layout_constraintTop_toBottomOf="@+id/btn_sumar" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/txt_resultado"
        android:textColorHint="#070707"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</androidx.constraintlayout.widget.ConstraintLayout>